<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/title_day"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_day"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/editText_day"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:layout_marginEnd="45dp"
            />

        <TextView
            android:id="@+id/title_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_time"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/editText_time"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="45dp"
            android:inputType="time"
            />

        <TextView
            android:id="@+id/title_duration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_duration"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/editText_duration"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="45dp"
            android:inputType="number"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/title_roomNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_roomNumber"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/editText_roomNumber"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="45dp"
            android:inputType="time"
            tools:ignore="TextFields" />

        <TextView
            android:id="@+id/idViewer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>


</LinearLayout>