<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:theme="@style/customToolbarStyle"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@android:color/holo_red_light">

    <TextView
        android:id="@+id/helloText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/activity3_display_message"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/adminInput"
        android:textColor="@color/textColor"
        android:textSize="30sp"
        android:background="@android:color/holo_red_light"
        />

    <EditText
        android:id="@+id/adminInput"
        android:backgroundTint="@color/teal"
        android:textColor="@color/textColor"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:maxLength="10"
        android:inputType="textPassword"
        android:shadowColor="@color/bgColor"
        />

    <RelativeLayout
        android:layout_width="200dp"
        android:background="@android:color/holo_red_light"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/adminInput">
        <Button
            android:id="@+id/adminBackButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/admin_back_button"
            android:layout_alignParentStart="true"
            />
        <Button
            android:id="@+id/adminLoginButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_button"
            android:layout_alignParentEnd="true"
            />

    </RelativeLayout>




</RelativeLayout>